tests/errors/preprocessor/after_functionid_must_be_comma.c
#define ABC(a b) (a-b)

int main()
{
	int x, y;
	x=1; y=2;
	ABC(x, y);
	return 0;
}

